--- a/GreekKey/Base.lproj/Main.storyboard
+++ b/GreekKey/Base.lproj/Main.storyboard
@@ -681,6 +681,175 @@
             <point key="canvasLocation" x="75" y="0.0"/>
         </scene>
         <!--Window Controller-->
+        <scene sceneID="tpJ-1l-tdi">
+            <objects>
+                <windowController storyboardIdentifier="optionsWindowController" id="tKO-Qd-HGb" sceneMemberID="viewController">
+                    <window key="window" title="Options" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="Oqb-wZ-20i" customClass="NSPanel">
+                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
+                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
+                        <rect key="contentRect" x="425" y="461" width="480" height="270"/>
+                        <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
+                        <connections>
+                            <outlet property="delegate" destination="tKO-Qd-HGb" id="4PW-z2-GPW"/>
+                        </connections>
+                    </window>
+                    <connections>
+                        <segue destination="0Sq-HV-rxe" kind="relationship" relationship="window.shadowedContentViewController" id="aXb-Xm-DVG"/>
+                    </connections>
+                </windowController>
+                <customObject id="CBV-Tk-Sbw" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="614" y="250"/>
+        </scene>
+        <!--Options View Controller-->
+        <scene sceneID="QcF-AM-WVJ">
+            <objects>
+                <viewController id="0Sq-HV-rxe" customClass="OptionsViewController" customModule="GreekKey" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" id="SsG-L9-xUP">
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Oba-fD-9gb">
+                                <rect key="frame" x="18" y="202" width="444" height="19"/>
+                                <sliderCell key="cell" continuous="YES" state="on" alignment="left" minValue="1" maxValue="100" doubleValue="7" tickMarkPosition="above" sliderType="linear" id="fgL-Ij-gdS">
+                                    <connections>
+                                        <action selector="sliderClicked:" target="0Sq-HV-rxe" id="k3Y-GS-mtc"/>
+                                    </connections>
+                                </sliderCell>
+                            </slider>
+                            <colorWell translatesAutoresizingMaskIntoConstraints="NO" id="jMa-G2-G6R">
+                                <rect key="frame" x="72" y="136" width="44" height="23"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="Fo5-ZQ-gQi"/>
+                                </constraints>
+                                <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="foregroundChanged:" target="0Sq-HV-rxe" id="lUg-QT-cnv"/>
+                                </connections>
+                            </colorWell>
+                            <colorWell translatesAutoresizingMaskIntoConstraints="NO" id="hQi-nz-Pgi">
+                                <rect key="frame" x="333" y="136" width="44" height="23"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="YtE-Oh-XlM"/>
+                                </constraints>
+                                <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="backgroundChanged:" target="0Sq-HV-rxe" id="iN2-L6-XmT"/>
+                                </connections>
+                            </colorWell>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Gol-XS-QwB">
+                                <rect key="frame" x="39" y="167" width="110" height="17"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Foreground Color" id="xhz-lL-ATh">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                                <connections>
+                                    <action selector="foregroundChanged:" target="0Sq-HV-rxe" id="YSa-JK-Ncc"/>
+                                </connections>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="F6x-XC-Zmf">
+                                <rect key="frame" x="298" y="167" width="114" height="17"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Background Color" id="XDy-yt-wnI">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="WWU-jz-9io">
+                                <rect key="frame" x="41" y="87" width="107" height="17"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Horizontal Count" id="9dg-Lg-DX6">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Wqf-Pe-zVG">
+                                <rect key="frame" x="310" y="87" width="91" height="17"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Vertical Count" id="I5M-TP-47Z">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" preferredMaxLayoutWidth="30" translatesAutoresizingMaskIntoConstraints="NO" id="JMH-ve-hGv">
+                                <rect key="frame" x="86" y="62" width="17" height="17"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="0" id="a4F-kJ-1fZ">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" preferredMaxLayoutWidth="30" translatesAutoresizingMaskIntoConstraints="NO" id="Gen-xx-1Y6">
+                                <rect key="frame" x="338" y="62" width="34" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="OJb-zF-xJ9"/>
+                                </constraints>
+                                <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="0" id="lch-0B-h2Q">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dtM-m2-pAq">
+                                <rect key="frame" x="202" y="227" width="94" height="17"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Block Size = 7" id="xCW-OC-YaJ">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                    <connections>
+                                        <outlet property="representedObject" destination="0Sq-HV-rxe" id="nz8-24-BId"/>
+                                    </connections>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="Gol-XS-QwB" firstAttribute="centerY" secondItem="F6x-XC-Zmf" secondAttribute="centerY" id="1Fg-uP-lKU"/>
+                            <constraint firstItem="jMa-G2-G6R" firstAttribute="leading" secondItem="SsG-L9-xUP" secondAttribute="leading" constant="72" id="2Wy-NW-1qK"/>
+                            <constraint firstItem="dtM-m2-pAq" firstAttribute="top" secondItem="SsG-L9-xUP" secondAttribute="top" constant="26" id="7eg-UU-3AB"/>
+                            <constraint firstItem="WWU-jz-9io" firstAttribute="top" secondItem="jMa-G2-G6R" secondAttribute="bottom" constant="32" id="CVD-GY-qcA"/>
+                            <constraint firstItem="Oba-fD-9gb" firstAttribute="top" secondItem="dtM-m2-pAq" secondAttribute="bottom" constant="8" id="DeR-sd-HXu"/>
+                            <constraint firstItem="WWU-jz-9io" firstAttribute="centerX" secondItem="Gol-XS-QwB" secondAttribute="centerX" id="Fa4-Wl-BDe"/>
+                            <constraint firstItem="F6x-XC-Zmf" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Gol-XS-QwB" secondAttribute="trailing" constant="8" symbolic="YES" id="GyA-HN-3TO"/>
+                            <constraint firstItem="Gen-xx-1Y6" firstAttribute="centerX" secondItem="hQi-nz-Pgi" secondAttribute="centerX" id="Hew-K3-y7Z"/>
+                            <constraint firstItem="dtM-m2-pAq" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="SsG-L9-xUP" secondAttribute="leading" symbolic="YES" id="JYE-zi-9PR"/>
+                            <constraint firstItem="WWU-jz-9io" firstAttribute="centerX" secondItem="jMa-G2-G6R" secondAttribute="centerX" id="Khj-C0-pLX"/>
+                            <constraint firstAttribute="trailing" secondItem="Gen-xx-1Y6" secondAttribute="trailing" constant="110" id="NIh-Df-XIt"/>
+                            <constraint firstAttribute="trailing" secondItem="Oba-fD-9gb" secondAttribute="trailing" constant="20" id="PZM-UZ-lDx"/>
+                            <constraint firstAttribute="bottom" secondItem="dtM-m2-pAq" secondAttribute="bottom" constant="227" id="R5o-ap-psc"/>
+                            <constraint firstItem="Oba-fD-9gb" firstAttribute="firstBaseline" secondItem="dtM-m2-pAq" secondAttribute="baseline" constant="23" id="RHJ-26-BCE"/>
+                            <constraint firstAttribute="trailing" secondItem="F6x-XC-Zmf" secondAttribute="trailing" constant="70" id="Ufx-k4-8QF"/>
+                            <constraint firstItem="Gen-xx-1Y6" firstAttribute="centerX" secondItem="F6x-XC-Zmf" secondAttribute="centerX" id="UrE-jo-kT0"/>
+                            <constraint firstItem="Oba-fD-9gb" firstAttribute="leading" secondItem="SsG-L9-xUP" secondAttribute="leading" constant="20" id="WEd-Hp-4sZ"/>
+                            <constraint firstItem="hQi-nz-Pgi" firstAttribute="bottom" secondItem="jMa-G2-G6R" secondAttribute="bottom" id="WbM-KX-Mzt"/>
+                            <constraint firstItem="hQi-nz-Pgi" firstAttribute="top" secondItem="jMa-G2-G6R" secondAttribute="top" id="ako-ny-wQa"/>
+                            <constraint firstItem="Gen-xx-1Y6" firstAttribute="top" secondItem="Wqf-Pe-zVG" secondAttribute="bottom" constant="8" symbolic="YES" id="cBT-QH-i1A"/>
+                            <constraint firstItem="WWU-jz-9io" firstAttribute="baseline" secondItem="Wqf-Pe-zVG" secondAttribute="baseline" id="fld-1D-YJy"/>
+                            <constraint firstAttribute="trailing" secondItem="dtM-m2-pAq" secondAttribute="trailing" constant="186" id="hCI-j7-V7h"/>
+                            <constraint firstAttribute="bottom" secondItem="Gen-xx-1Y6" secondAttribute="bottom" constant="62" id="kO3-9t-WHw"/>
+                            <constraint firstItem="Gen-xx-1Y6" firstAttribute="baseline" secondItem="JMH-ve-hGv" secondAttribute="baseline" id="o7p-zQ-ctk"/>
+                            <constraint firstItem="hQi-nz-Pgi" firstAttribute="top" secondItem="F6x-XC-Zmf" secondAttribute="bottom" constant="8" symbolic="YES" id="pzV-xH-eMp"/>
+                            <constraint firstItem="Gol-XS-QwB" firstAttribute="top" secondItem="Oba-fD-9gb" secondAttribute="bottom" constant="20" id="rMU-D0-pJq"/>
+                            <constraint firstItem="Oba-fD-9gb" firstAttribute="centerX" secondItem="SsG-L9-xUP" secondAttribute="centerX" id="uig-ET-XLp"/>
+                            <constraint firstItem="Gol-XS-QwB" firstAttribute="leading" secondItem="SsG-L9-xUP" secondAttribute="leading" constant="41" id="wZL-Q4-hmK"/>
+                            <constraint firstItem="WWU-jz-9io" firstAttribute="centerX" secondItem="JMH-ve-hGv" secondAttribute="centerX" id="wbu-CF-Ppv"/>
+                            <constraint firstItem="Gen-xx-1Y6" firstAttribute="centerX" secondItem="Wqf-Pe-zVG" secondAttribute="centerX" id="x8U-8b-Tcp"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="backgroundColorWell" destination="hQi-nz-Pgi" id="RLs-Qh-UOO"/>
+                        <outlet property="blockSizeLabel" destination="dtM-m2-pAq" id="2c2-eN-b00"/>
+                        <outlet property="blockSizeSlider" destination="Oba-fD-9gb" id="DzE-9e-jh4"/>
+                        <outlet property="foregroundColorWell" destination="jMa-G2-G6R" id="3qS-AA-zvY"/>
+                        <outlet property="horizontalCountLabel" destination="JMH-ve-hGv" id="n7d-jz-Vpi"/>
+                        <outlet property="verticalCountLabel" destination="Gen-xx-1Y6" id="WxU-TW-eVh"/>
+                    </connections>
+                </viewController>
+                <customObject id="mo1-mD-Wy5" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="614" y="655"/>
+        </scene>
+        <!--Window Controller-->
         <scene sceneID="R2V-B0-nI4">
             <objects>
                 <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
@@ -701,14 +870,29 @@
             </objects>
             <point key="canvasLocation" x="75" y="250"/>
         </scene>
-        <!--View Controller-->
+        <!--Results View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="GreekKey" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="XfG-lQ-9wD" customClass="ResultsViewController" customModule="GreekKey" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="xUI-ic-NsU">
+                                <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Yma-4U-yvE"/>
+                            </imageView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="xUI-ic-NsU" secondAttribute="trailing" id="MgU-gS-goX"/>
+                            <constraint firstItem="xUI-ic-NsU" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="maU-Cp-4mP"/>
+                            <constraint firstItem="xUI-ic-NsU" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="q7K-uF-crM"/>
+                            <constraint firstAttribute="bottom" secondItem="xUI-ic-NsU" secondAttribute="bottom" id="xEr-PG-jnM"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="xUI-ic-NsU" id="2Y4-Rn-rc4"/>
+                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
